# xtc

./: .gitlab-ci.yml  AbsImplementer.py  JIRImplementer.py  Makefile  MlirGraphImplementer.py  MlirImplementer.py  MmMlirSepInitImplementer.py  PartialImplementer.py  PerfectlyNestedImplementer.py  README.md  XdslImplementer.py  broadcast_add.py  eval_op.sh  explore.py  mlir_packing.py  pyproject.toml  requirements.txt  requirements_dev.txt  runtime.py  setup_mlir_mm.py  setup_xdsl_mm.py  test-just-evaluate.py  test-mlir-compile.py  test-mlir-evaluate.py  test-mlir-generate-and-compile.py  test-mlir-generate-and-evaluate.py  test-mlir-generate.py  test-mlir-sep-init-evaluate.py  test-mlir-sep-init-generate.py  test-on-memrefs.mlir  test-on-tensors.mlir  test-xdsl-compile.py  test-xdsl-evaluate.py  test-xdsl-generate.py  test-xdsl-sep-init-evaluate.py  transform.py
.github/: pull_request_template.md
.github/workflows/: xtc-pages.yml  xtc-tests.yml
blueprints/: xdsl_generic.py
data/: results.mm06-tile4dv-jir.csv
docs/develop/: optional_backends.md
docs/site/: mkdocs.yml
docs/tutorials/: cli_tools.md  starting_examples.md  xtc_101.py
scripts/coverage/: coverage_run.sh
src/: MlirImplementer.py  MlirModule.py  MlirNodeImplementer.py  TVMImplementer.py  cndarray.c  evaluate.c  explore.py  ext_tools.py  mlir_loop.py
tests/: demo-mlir-graph.py  setup_mlir_mm.py  test-just-compile.py  test-just-evaluate.py  test-mlir-mm-compile.py  test-mlir-mm-evaluate-1.py  test-mlir-mm-evaluate-4.py  test-mlir-mm-generate-and-compile.py  test-mlir-mm-generate-and-evaluate.py
(+247 files in other folders)
