[project]
name = "xtc"
version = "0.1"
dependencies = ['jinja2', 'matplotlib', 'numpy', 'ordered-set', 'py-cpuinfo', 'tqdm', 'typing_extensions', 'pyyaml','lit','filecheck','xdsl~=0.26.0']
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "filecheck",
    "lit",
    "pytest",
]

[tool.setuptools]
platforms = ["Linux"]
zip-safe = false

[tool.setuptools.package-data]
xtc = ["py.typed", "ctools/**", "templates/**"]

[project.scripts]
mlir-loop = "xtc.mlir_loop:main"
backend = "xtc.backend:main"
loop-display = "xtc.display_results:main"
loop-explore = "xtc.explore:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = [
        "src/MlirModule.py",
        "src/MlirImplementer.py",
        "src/MlirGraphImplementer.py",
        "src/MlirNodeImplementer.py",
]
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportImplicitOverride = "error"
reportUninitializedInstanceVariable = "error"
reportPossiblyUnboundVariable = "error"
reportIncompatibleVariableOverride = "error"
reportIncompatibleMethodOverride = "error"
reportArgumentType = "error"
reportReturnType = "error"
reportAbstractUsage = "error"
reportUnusedImport = "error"